# agentfaildb

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  agentfaildb-runner.sh  docker-compose.yml  pyproject.toml  run_validation_batch.py  smoke_test.py
.github/workflows/: ci.yml
agentfaildb/: annotator.py  config.py  dashboard.py  detector.py  evaluator.py  metrics.py  trace.py
agentfaildb/analysis/: __init__.py  compute_metrics.py  export_hf_dataset.py
agentfaildb/harness/: __init__.py  api.py  db.py  orchestrator.py  trace_collector.py
agentfaildb/leaderboard/: __init__.py  app.py
agentfaildb/patterns/: __init__.py  base_pattern.py  cascading_hallucination.py  conflicting_outputs.py  context_degradation.py  delegation_loop.py  resource_exhaustion.py  role_violation.py  silent_failure.py
agentfaildb/runners/: __init__.py  autogen_runner.py  base_runner.py  crewai_runner.py  langgraph_runner.py  metagpt_runner.py
agentfaildb/tasks/: __init__.py  base_task.py  code_generation.py  collaborative_research.py  data_analysis.py  debate_reasoning.py  planning.py
agentfaildb/templates/: dashboard.html
db/: init.sql
docs/: PRODUCT_SPEC.md  REHAUL_DIAGNOSTIC.md  RESULTS.md  agentfaildb-blueprint.md  agentfaildb-full-architecture.md  agentfaildb-system-design.md
scripts/: deploy_3050.sh  deploy_3050_v2.sh  drop-caches.sh  fix_autogen.sh  fix_crewai.sh  install_litellm.sh  run_pipeline.sh
tests/: test_detector.py  test_evaluator.py  test_tasks.py  test_trace.py  test_trace_collector.py
